k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ble-messenger
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: ble-messenger
